Añadido Ventanas emergentes de errores
Añadidas las ventanas emergentes con los errores 101 y 102.

--- a/Aprendo con Molly/Capa Presentacion.csproj
+++ b/Aprendo con Molly/Capa Presentacion.csproj
@@ -95,6 +95,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Simple Styles.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="VentanaEmergente.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
