--- a/Aprendo con Molly/Capa Presentacion.csproj
+++ b/Aprendo con Molly/Capa Presentacion.csproj
@@ -142,6 +142,8 @@
     <Resource Include="amarillo.png" />
     <Resource Include="azul.png" />
     <Resource Include="blanco.png" />
+    <Resource Include="boyom.png" />
+    <Resource Include="boyom1.png" />
     <Resource Include="fondo3.jpg" />
     <Resource Include="fondo5.jpg" />
     <Resource Include="images.jpg" />
