Creo Tabla Avatares BD
Creo la tabla avatares en la BD y empiezo a crear algun metodo.

--- a/Capa de Negocio/Capa de Negocio.csproj
+++ b/Capa de Negocio/Capa de Negocio.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Juego.cs" />
+    <Compile Include="ModeloDatos\Avatar.cs" />
     <Compile Include="ModeloDatos\Nivel.cs" />
     <Compile Include="ModeloDatos\Partida.cs" />
     <Compile Include="ModeloDatos\Tipo.cs" />
