panel de colores
no se hacer el efecto chachi que me decias .... si eso me haces lo que
quieres con una.. y yo le paso a los demas

--- a/Aprendo con Molly/Capa Presentacion.csproj
+++ b/Aprendo con Molly/Capa Presentacion.csproj
@@ -150,6 +150,7 @@
     <Resource Include="marron.png" />
     <Resource Include="Molly.jpg" />
     <Resource Include="Molly.png" />
+    <Resource Include="morada.png" />
     <Resource Include="naranja.png" />
     <Resource Include="negro.png" />
     <Resource Include="pantallaInicio.png" />
