nombres de colores
tengo la plantilla psd para modificar el color del texto o lo que sea...
El nombre del color sale de  manera aleatoria según el color que el niño
tiene que pulsar.... como el juego de belen vaya. Cuando el niño
acierta... sale la pintura del color correspondiente

--- a/Aprendo con Molly/Capa Presentacion.csproj
+++ b/Aprendo con Molly/Capa Presentacion.csproj
@@ -139,6 +139,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="am.png" />
     <Resource Include="amarillo.png" />
     <Resource Include="azul.png" />
     <Resource Include="blanco.png" />
