--- a/Aprendo con Molly/Capa Presentacion.csproj
+++ b/Aprendo con Molly/Capa Presentacion.csproj
@@ -145,6 +145,7 @@
     <Resource Include="blanco.png" />
     <Resource Include="boyom.png" />
     <Resource Include="boyom1.png" />
+    <Resource Include="flores.png" />
     <Resource Include="fondo3.jpg" />
     <Resource Include="fondo5.jpg" />
     <Resource Include="images.jpg" />
