capa flores redondeada para que no sobresalga

--- a/Aprendo con Molly/Capa Presentacion.csproj
+++ b/Aprendo con Molly/Capa Presentacion.csproj
@@ -146,6 +146,7 @@
     <Resource Include="boyom.png" />
     <Resource Include="boyom1.png" />
     <Resource Include="flores.png" />
+    <Resource Include="floress.png" />
     <Resource Include="fondo3.jpg" />
     <Resource Include="fondo5.jpg" />
     <Resource Include="images.jpg" />
