Creado modelo Pregunta.
Creado modelo Pregunta, función a los botones cerrar y minimizar.
Renombrado rectangulos con nombre que acompañan al contenido del diseño.

--- a/Capa de Negocio/Capa de Negocio.csproj
+++ b/Capa de Negocio/Capa de Negocio.csproj
@@ -43,6 +43,7 @@
     <Compile Include="ModeloDatos\Avatar.cs" />
     <Compile Include="ModeloDatos\Nivel.cs" />
     <Compile Include="ModeloDatos\Partida.cs" />
+    <Compile Include="ModeloDatos\Pregunta.cs" />
     <Compile Include="ModeloDatos\Tipo.cs" />
     <Compile Include="ModeloDatos\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
