--- a/Aprendo con Molly/Capa Presentacion.csproj
+++ b/Aprendo con Molly/Capa Presentacion.csproj
@@ -163,6 +163,10 @@
     <Resource Include="k.png" />
     <Resource Include="l.png" />
     <Resource Include="m.png" />
+    <Resource Include="ma.png" />
+    <Resource Include="mar.png" />
+    <Resource Include="mariposas.png" />
+    <Resource Include="marips.png" />
     <Resource Include="marron.png" />
     <Resource Include="Molly.jpg" />
     <Resource Include="Molly.png" />
