--- a/Aprendo con Molly/Capa Presentacion.csproj
+++ b/Aprendo con Molly/Capa Presentacion.csproj
@@ -201,6 +201,9 @@
     <Resource Include="pelota.png" />
     <Resource Include="perro.jpg" />
     <Resource Include="perro.png" />
+    <Resource Include="prueba.png" />
+    <Resource Include="prueba2.png" />
+    <Resource Include="prueba3.png" />
     <Resource Include="q.png" />
     <Resource Include="r.png" />
     <Resource Include="rojo.png" />
